Add hot reload to Docker and bug fixes